# gpu-benchmark

./: README.md  WAN2.1_SETUP.md  pyproject.toml
src/gpu_benchmark/: database.py  main.py  wan_benchmark.py
