[project]
name = "gpu_benchmark"
version = "0.3.0"
description = "GPU benchmarking tool using Stable Diffusion and Wan2.1 video generation"
readme = "README.md"
authors = [
    {name = "Max Hager", email = "maxhager28@gmail.com"}
]
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "tqdm",
    "diffusers>=0.31.0",
    "transformers>=4.49.0",
    "tokenizers>=0.20.3",
    "accelerate>=1.1.1",
    "pynvml",
    "opencv-python>=4.9.0.80",
    "imageio",
    "imageio-ffmpeg",
    "easydict",
    "ftfy",
    "numpy>=1.23.5,<2",
    "gradio>=5.0.0",
    "requests"
]

[project.scripts]
gpu-benchmark = "gpu_benchmark.main:main"